@@ -23,19 +23,21 @@
 
 package com.iluwatar.unitofwork;
 
+import static org.junit.Assert.assertEquals;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyNoMoreInteractions;
+import static org.mockito.Mockito.verifyZeroInteractions;
+
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.mockito.Mock;
 import org.mockito.runners.MockitoJUnitRunner;
-
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-
-import static org.junit.Assert.assertEquals;
-import static org.mockito.Mockito.*;
 
 /**
  * tests {@link StudentRepository}
@@ -51,7 +53,7 @@ public class StudentRepositoryTest {
   private StudentRepository studentRepository;
 
   @Before
-  public void setUp() throws Exception {
+  public void setUp() {
     context = new HashMap<>();
     studentRepository = new StudentRepository(context, studentDatabase);
   }
@@ -61,7 +63,7 @@ public class StudentRepositoryTest {
     studentRepository.registerNew(student1);
     studentRepository.registerNew(student2);
 
-    assertEquals(2, context.get(IUnitOfWork.INSERT).size());
+    assertEquals(2, context.get(UnitActions.INSERT.getActionValue()).size());
     verifyNoMoreInteractions(studentDatabase);
   }
 
@@ -70,7 +72,7 @@ public class StudentRepositoryTest {
     studentRepository.registerDeleted(student1);
     studentRepository.registerDeleted(student2);
 
-    assertEquals(2, context.get(IUnitOfWork.DELETE).size());
+    assertEquals(2, context.get(UnitActions.DELETE.getActionValue()).size());
     verifyNoMoreInteractions(studentDatabase);
   }
 
@@ -79,15 +81,15 @@ public class StudentRepositoryTest {
     studentRepository.registerModified(student1);
     studentRepository.registerModified(student2);
 
-    assertEquals(2, context.get(IUnitOfWork.MODIFY).size());
+    assertEquals(2, context.get(UnitActions.MODIFY.getActionValue()).size());
     verifyNoMoreInteractions(studentDatabase);
   }
 
   @Test
   public void shouldSaveAllLocalChangesToDb() {
-    context.put(IUnitOfWork.INSERT, Collections.singletonList(student1));
-    context.put(IUnitOfWork.MODIFY, Collections.singletonList(student1));
-    context.put(IUnitOfWork.DELETE, Collections.singletonList(student1));
+    context.put(UnitActions.INSERT.getActionValue(), List.of(student1));
+    context.put(UnitActions.MODIFY.getActionValue(), List.of(student1));
+    context.put(UnitActions.DELETE.getActionValue(), List.of(student1));
 
     studentRepository.commit();
 
@@ -116,8 +118,8 @@ public class StudentRepositoryTest {
 
   @Test
   public void shouldNotInsertToDbIfNoRegisteredStudentsToBeCommitted() {
-    context.put(IUnitOfWork.MODIFY, Collections.singletonList(student1));
-    context.put(IUnitOfWork.DELETE, Collections.singletonList(student1));
+    context.put(UnitActions.MODIFY.getActionValue(), List.of(student1));
+    context.put(UnitActions.DELETE.getActionValue(), List.of(student1));
 
     studentRepository.commit();
 
@@ -126,8 +128,8 @@ public class StudentRepositoryTest {
 
   @Test
   public void shouldNotModifyToDbIfNotRegisteredStudentsToBeCommitted() {
-    context.put(IUnitOfWork.INSERT, Collections.singletonList(student1));
-    context.put(IUnitOfWork.DELETE, Collections.singletonList(student1));
+    context.put(UnitActions.INSERT.getActionValue(), List.of(student1));
+    context.put(UnitActions.DELETE.getActionValue(), List.of(student1));
 
     studentRepository.commit();
 
@@ -136,8 +138,8 @@ public class StudentRepositoryTest {
 
   @Test
   public void shouldNotDeleteFromDbIfNotRegisteredStudentsToBeCommitted() {
-    context.put(IUnitOfWork.INSERT, Collections.singletonList(student1));
-    context.put(IUnitOfWork.MODIFY, Collections.singletonList(student1));
+    context.put(UnitActions.INSERT.getActionValue(), List.of(student1));
+    context.put(UnitActions.MODIFY.getActionValue(), List.of(student1));
 
     studentRepository.commit();
 
